--- a/app/views/initial_pages/home.html.erb
+++ b/app/views/initial_pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>InitialPages#home</h1>
-<p>Find me in app/views/initial_pages/home.html.erb</p>
+<% provide(:title, 'Home') %>
+
+<h1>Welcome to the NFL Rails Page</h1>
+
+<h2>
+  This is the home page for the
+  <a href="http://www.nfl.com/">NFL</a>
+  Rails App sample application.
+</h2>
+<h2>To see your favorite team, click <a href=/teams>here</a></h2>
+
