Added scores to teams and coaches pages are linked to teams

--- a/app/views/initial_pages/home.html.erb
+++ b/app/views/initial_pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="center hero-unit">
+<div class="center hero-unit" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
   <h1>Welcome to the NFL Rails Page</h1>
 
   <h2>
@@ -11,7 +11,10 @@
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  </br>
+  </br>
+  <%= link_to image_tag("nfl.png", alt: "NFL"), 'http://www.nfl.com/' %>
+
 </div>
 
-<%= link_to image_tag("nfl.png", alt: "NFL"), 'http://www.nfl.com/' %>
 
