--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <a href="http://www.nfl.com/">NFL Rails App</a>
+    <li><%= link_to "NFL Rails App", root_path %></li>
     by Adam Olshansky
   </small>
   <nav>
