--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Help", help_path %></li>
           <li><%= link_to "Teams", teams_path %></li>
+          <li><%= link_to "Coaches", coaches_path %></li>
           <li><%= link_to "Sign in", signup_path %></li>
         </ul>
       </nav>
